@@ -85,20 +85,20 @@
         <version>3.3.2</version>
       </plugin>
 
-<!--      <plugin>-->
-<!--        <groupId>org.apache.maven.plugins </groupId>-->
-<!--        <artifactId>maven-surefire-plugin </artifactId>-->
-<!--        <version>2.22.2 </version>-->
-<!--        <configuration>-->
-<!--          <argLine>-->
-<!--            &#45;&#45;illegal-access=permit-->
-<!--          </argLine>-->
-<!--          <testFailureIgnore>true</testFailureIgnore>-->
-<!--          <forkCount>2</forkCount>-->
-<!--          <reuseForks>true</reuseForks>-->
-<!--          <argLine>${surefireArgLine}</argLine>-->
-<!--        </configuration>-->
-<!--      </plugin>-->
+      <plugin>
+        <groupId>org.apache.maven.plugins </groupId>
+        <artifactId>maven-surefire-plugin </artifactId>
+        <version>2.22.2 </version>
+        <configuration>
+          <argLine>
+            --illegal-access=permit
+          </argLine>
+          <testFailureIgnore>true</testFailureIgnore>
+          <forkCount>2</forkCount>
+          <reuseForks>true</reuseForks>
+          <argLine>${surefireArgLine}</argLine>
+        </configuration>
+      </plugin>
 
 
       <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-war-plugin -->
